--- a/src/main/resources/templates/aluno/listaAlunos.html
+++ b/src/main/resources/templates/aluno/listaAlunos.html
@@ -44,7 +44,7 @@
     <hr />
 
     <div class="container">
-      <h3>Ultimos alunos adicionados</h3>
+      <h3>Ultimos alunos adicionados no Academy</h3>
       <hr />
       <table class="table table-bordered table-hover">
         <thead>
