--- a/src/main/resources/templates/fragmentos_001/fragmentos.html
+++ b/src/main/resources/templates/fragmentos_001/fragmentos.html
@@ -12,7 +12,7 @@
 
     <header  th:fragment = "cabecario">
       
-      <a th:href="@{/}"  class="logo-img">  <img class="logoacademy" src="img/logoacademy.png" alt=""></a>
+      <a th:href="@{/}"  class="logo-img">  <img class="logoacademy" src="/img/logoacademy.png" alt=""></a>
     
    
       <nav class="nav-header">
