--- a/src/main/resources/templates/aluno/inativos.html
+++ b/src/main/resources/templates/aluno/inativos.html
@@ -54,7 +54,7 @@
     <hr />
 
     <div class="container">
-      <h3>Ultimos alunos adicionados no Academy</h3>
+      <h3>Alunos Inativos no Sistema</h3>
       <hr />
 
       <div class="tabela">
