--- a/src/main/resources/templates/aluno/trancados.html
+++ b/src/main/resources/templates/aluno/trancados.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inserir Alunos</title>
+    <title>Alunos Ativos</title>
     <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -54,7 +54,7 @@
     <hr />
 
     <div class="container">
-      <h3>Ultimos alunos adicionados no Academy</h3>
+      <h3>Alunos Trancados no Sistema</h3>
       <hr />
 
       <div class="tabela">
