--- a/src/main/resources/templates/aluno/ativos.html
+++ b/src/main/resources/templates/aluno/ativos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <style>
-    h4 {
+    h3 {
       text-align: center;
     }
     .edit {
@@ -54,7 +54,7 @@
     <hr />
 
     <div class="container">
-      <h3>Alunos Ativos no Sistema</h3>
+      <h3>ALUNOS ATIVOS NO SISTEMA</h3>
       <hr />
 
       <div class="tabela">
@@ -96,7 +96,8 @@
         </table>
       </div>
     </div>
-
+    <hr>
+    <footer th:replace="fragmentos_001/fragmentos :: footer"></footer>
     <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
     <script src="/webjars/bootstrap/bootstrap.min.js"></script>
   </body>
