--- a/src/main/resources/templates/fragmentos_001/fragmentos.html
+++ b/src/main/resources/templates/fragmentos_001/fragmentos.html
@@ -18,7 +18,7 @@
       <nav class="nav-header">
         <li><a th:href="@{/home}">Home</a></li>
         <li><a th:href="@{/inserirAlunos}">Cadastrar aluno</a></li>
-        <li><a th:href="@{/filtro}">Pesquisar</a></li>
+        <li><a th:href="@{/encontrar}">Pesquisar</a></li>
         <li><a href="#" class="sair">Sair</a></li>
       </nav>
 
