--- a/src/main/resources/templates/home/Index.html
+++ b/src/main/resources/templates/home/Index.html
@@ -8,6 +8,14 @@
 
     <link rel="stylesheet" href="/css/style.css" />
   </head>
+
+
+  <style>
+ 
+
+  </style>
+
+
   <body>
     <header th:replace="/fragmentos_001/fragmentos :: cabecario"></header>
 
@@ -20,13 +28,15 @@
         </section>
         <section class="btns">
           <a th:href="@{/inserirAlunos}"><h5>CADASTRAR ALUNO</h5></a>
-          <a href="#"><h5>ENCONTRAR ALUNO</h5></a>
+          <a th:href="@{/filtro}"><h5>ALUNOS NO SISTEMA</h5></a>
         </section>
+     
       </div>
+   
     </main>
     <hr />
-
     <footer th:replace="fragmentos_001/fragmentos :: footer"></footer>
+  
 
     <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
     <script src="/webjars/bootstrap/bootstrap.min.js"></script>
