--- a/src/main/resources/templates/aluno/listaAlunos.html
+++ b/src/main/resources/templates/aluno/listaAlunos.html
@@ -96,7 +96,8 @@
         </table>
       </div>
     </div>
-
+    <hr>
+    <footer th:replace="fragmentos_001/fragmentos :: footer"></footer>
     <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
     <script src="/webjars/bootstrap/bootstrap.min.js"></script>
   </body>
