--- a/src/main/resources/templates/aluno/pesquisaPorNome.html
+++ b/src/main/resources/templates/aluno/pesquisaPorNome.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <style>
-    h3 {
+    h4 {
       text-align: center;
     }
     .edit {
@@ -54,7 +54,7 @@
     <hr />
 
     <div class="container">
-      <h3>ALUNOS CANCELADOS NO SISTEMA</h3>
+      <h3>ALUNOS POR NOME</h3>
       <hr />
 
       <div class="tabela">
@@ -64,17 +64,14 @@
             <th scope="col">CURSO</th>
             <th scope="col">MATRICULA</th>
             <th scope="col">STATUS</th>
-            <th scope="col">id</th>
             <th scope="col">MODIFICAR</th>
-      
           </thead>
           <tbody>
-            <tr scope="row" th:each="aluno : ${lista_alunos}">
+            <tr scope="row" th:each="aluno : ${lista}">
               <td th:text="${aluno.nome}"></td>
               <td th:text="${aluno.curso}"></td>
               <td th:text="${aluno.matricula}"></td>
               <td th:text="${aluno.status}"></td>
-              <td th:text="${aluno.id}"></td>
 
               <td>
                 <a
@@ -89,15 +86,15 @@
                 >
                   <i class="fas fa-times"></i>EXCLUIR</a
                 >
-               
               </td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
-    <hr>
-    <footer th:replace="fragmentos_001/fragmentos :: footer"></footer>
+   
+    <hr >
+
     <script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
     <script src="/webjars/bootstrap/bootstrap.min.js"></script>
   </body>
